--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'queue' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'queueTests' do
     inherit! :search_paths
     # Pods for testing
